# wsd-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  scheduled.yml  test.yml
assets/testing/: example1.in.txt
crates/process-corpus/: Cargo.toml
crates/process-corpus/src/: lemma_token.rs  lib.rs  process_corpus.rs
crates/process-corpus/tests/process-corpus-api/: main.rs  test_lemma_token.rs
crates/process-corpus/tests/process-corpus-api/snapshots/: process_corpus_api__test_lemma_token__lemma_tokens.snap
crates/saldo/: Cargo.toml
crates/saldo/src/: lib.rs  saldo_entry.rs  saldo_lemgram.rs  saldo_lexicon.rs
crates/saldo/src/saldo_lexicon/: parser_callback.rs
crates/saldo/src/shared/: mod.rs  xml_reader.rs
crates/saldowsd/: Cargo.toml
crates/saldowsd/src/: main.rs  options.rs
crates/w2v/: Cargo.toml
crates/w2v/src/: lib.rs  word2vec2.rs
crates/wsd-application/: Cargo.toml
crates/wsd-application/src/: lib.rs  source_format.rs  vector_wsd.rs  wsd_application.rs
crates/wsd-application/src/source_format/: tab_format.rs
crates/wsd-application/tests/api/: main.rs  vector_wsd.rs
crates/wsd-application/tests/api/snapshots/: api__vector_wsd__vector_wsd.snap
