[workspace]
resolver = "2"
members = [
    "crates/process-corpus",
    "crates/saldo",
    "crates/saldowsd",
    #"crates/wsd-application",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# local crates
saldo = { path = "crates/saldo" }
process-corpus = { path = "crates/process-corpus" }

# external crates
log = "0.4.22"
miette = "7.4.0"
quick-xml = "0.37.0"
thiserror = "2.0.4"
