[package]
name = "saldo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flate2.workspace = true
hashbrown.workspace = true
log = { workspace = true }
miette.workspace = true
quick-xml = { workspace = true }
thiserror.workspace = true
