[package]
name = "saldowsd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# local deps
saldo = { workspace = true }
wsd-application = { workspace = true }
#
env_logger = "0.11.5"
hashbrown.workspace = true
log.workspace = true
miette = { workspace = true, features = ["fancy"] }
thiserror.workspace = true
