[package]
name = "wsd-application"
version.workspace = true
edition.workspace = true

[dependencies]
# local deps
process-corpus = { workspace = true }
saldo = { workspace = true }

# external deps
finalfusion = "0.18.0"
hashbrown.workspace = true
log.workspace = true
miette.workspace = true
thiserror.workspace = true
ndarray = "0.15"
